--- a/chat/templates/rooms.html
+++ b/chat/templates/rooms.html
@@ -4,48 +4,47 @@
     <h1 class="display-4">Rooms</h1>
 </div>
 
-<div class="row">
+<div class="row ">
     <div class="col-sm-4">
-        Rooms
-        <br> <br>
+        <p class="text-center text-light ">
+            Rooms
+        </p>
+        <a class="btn btn-block btn-primary" data-toggle="modal" data-target="#modelId">New Room</a>
+        <br>
         <ul class="list-group">
-            <li class="list-group-item active">Room Active</li>
-            <li class="list-group-item">Room 1</li>
-            <li class="list-group-item">Room 2</li>
+            {% for r in rooms %}
+            <li class="list-group-item">{{r.name}} <a class="float-right btn btn-dark"
+                    href="{% url 'chat:room' r.pk %}">></a> </li>
+            {% endfor %}
         </ul>
 
     </div>
     <div class="col-sm-8">
-        <p class="text-center">
+        <p class="text-center text-light">
             Chat
         </p>
 
         <div class="card">
             <div class="card-header">
-                Name Room
+                {% if object %} {{object.name}} {% endif %}
             </div>
             <div class="card-body">
 
                 <ul id="chat" class="list-unstyled">
-                        <li>Message</li>
-                        <li>Message</li>
-                        <li>Message</li>
+                    <li>Message</li>
+                    <li>Message</li>
+                    <li>Message</li>
                 </ul>
-
-
-
-
-
-                <form id="form" action=""  method="post">
+                <form id="form" action="" method="post">
                     {% csrf_token %}
                     <div class="input-group">
                         <input id="message" autofocus class="form-control" type="text" placeholder="Message">
                         <div class="input-group-append">
-                            <button type="submit" class="btn input-group-text" >Send</button>
+                            <button type="submit" class="btn input-group-text">Send</button>
                         </div>
                     </div>
                 </form>
-                    
+
             </div>
             <div class="card-footer">
                 Date Room
@@ -53,58 +52,84 @@
         </div>
     </div>
 </div>
+<!-- Button trigger modal -->
+<!-- Modal -->
+<div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">New Room</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
 
+            <form action="" method="post">
+                <div class="modal-body">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="">Room Name</label>
+                        {{form.as_p}}
 
-
+                        <!-- <input type="text"
+                        class="form-control" name="name" id="name" aria-describedby="helpId" placeholder="">
+                      <small id="helpId" class="form-text text-muted">Description Room </small> -->
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
 
 
-
 {% block script %}
-
-
 <script>
-
     var chat = $("#chat")
     var form = $("#form")
-    var msg  = $("#message")
-    var loc  = window.location
-    
+    var msg = $("#message")
+    var loc = window.location
+
     var start = 'ws://'
-    if(loc.host == 'https://'){
+    if (loc.host == 'https://') {
         start = 'wss://'
     }
 
-    var endpoint = start + loc.host + '/message'
+    var endpoint = start + loc.host + '/rooms'
     console.log(endpoint)
     var socket = new WebSocket(endpoint)
 
-    form.submit(function(event){
-        chat.append("<li>" + msg.val() + "</li>")
-        console.log(msg.val())
-        event.preventDefault()
-        form[0].reset()
-    });
 
 
 
-    
+    socket.onmessage = function (event) {
+        console.log('Message', event)
+        $("#form")
+    }
 
-    socket.onmessage(function(event){
-        console.log("Message",event)
-    })
-    socket.onopen(function(event){
-        console.log('Open',event)
-    })
-    socket.onclose(function(event){
-        console.log('Close',event)
-    })
+    socket.onclose = function (event) {
+        console.log('Close', event)
+    }
+    socket.onopen = function (event) {
+        console.log('Open', event)
+        form.submit(function (event) {
+            chat.append("<li>" + msg.val() + "</li>")
+            var msgText = msg.val()
+            console.log(msgText)
 
+            var dataFinal = {
+                'message': msgText
+            }
+            socket.send(JSON.stringify(dataFinal))
+            event.preventDefault()
+            form[0].reset()
+        });
 
-
-
-
-
+    }
 </script>
 {% endblock script %}
